--- a/01_FactoryMethod/01_FactoryMethod.csproj
+++ b/01_FactoryMethod/01_FactoryMethod.csproj
@@ -43,11 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\BikeTransport.cs" />
+    <Compile Include="Factories\CarTransport.cs" />
+    <Compile Include="Factories\Transport.cs" />
+    <Compile Include="Factories\MotorcycleTransport.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vehicles\Bike.cs" />
+    <Compile Include="Vehicles\Car.cs" />
+    <Compile Include="Vehicles\IVehicle.cs" />
+    <Compile Include="Vehicles\Motorcycle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
