--- a/05_Bridge/05_Bridge.csproj
+++ b/05_Bridge/05_Bridge.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DDE35676-7BF8-45F4-BBEF-F474800522E5}</ProjectGuid>
+    <ProjectGuid>{7A86167D-BE14-4C42-9836-9FD127F0EF9C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_04_Adapter</RootNamespace>
-    <AssemblyName>04_Adapter</AssemblyName>
+    <RootNamespace>_05_Bridge</RootNamespace>
+    <AssemblyName>05_Bridge</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,18 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Payments\Payonner\IPayonner.cs" />
-    <Compile Include="Payments\Payonner\Payonner.cs" />
-    <Compile Include="Payments\Payonner\PayonnerAdapter.cs" />
-    <Compile Include="Payments\Paypal\IPayPalPayment.cs" />
-    <Compile Include="Payments\Paypal\PayPal.cs" />
-    <Compile Include="Payments\Token.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
